k8s-dashboard/04-ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-k8s-dashboard-ui
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
#    cert-manager.io/issuer: "selfsigned-issuer"
spec:
  rules:
  - http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: kubernetes-dashboard
              port:
                number: 443
    host: k8s-dashboard.teste.com.br  # REMOVE this to redirect all requests for this ingress for dashboard OR 
                                      # set/add a DNS configuration to kubernetes dashboard on /etc/hosts, example:
                                      #
                                      # 192.168.0.100 k8s-dashboard.teste.com.br
                                      # 192.168.0.101 k8s-dashboard.teste.com.br
                                      # 192.168.0.102 k8s-dashboard.teste.com.br
# TO ENABLE TLS ON INGRESS
  tls:
    - hosts:
      - k8s-dashboard.teste.com.br
      secretName: k8s-dashboard.teste.com.br # MUST BE CREATE A SECRET TLS / CERTIFICATE
